--- a/cities.html
+++ b/cities.html
@@ -19,6 +19,30 @@
   </head>
 <body>
   <h4><center>Visit cities with Sreeja</center></h4>
+</br>
+<div class="container">
+<nav class="navbar navbar-expand-md navbar-light bg-light" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">A Few Cities</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="basic.html">Basic</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="advanced.html">Advanced</a>
+          </li>
+      </div>
+    </div>
+  </nav>
+</div>
+</br>
     <div class="container">
 
         <div class="row">
@@ -154,15 +178,7 @@
     </br>
     </br>
     
-    <div class="container dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown Menu
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="basic.html">Basic</a></li>
-          <li><a class="dropdown-item" href="advanced.html">Advanced</a></li>
-        </ul>
-      </div>
+  
       <div class="container dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           Dropdown Menu
@@ -197,6 +213,42 @@
      </form>
     </div>
     </br>
+<div class="container">
+    <div class="row">
+<div class="card" style="width: 22rem;">
+    <img src="Vancouver.jpg" class="card-img-top" alt="Agra" height="245px">
+    <div class="card-body">
+      <p class="card-text">Vancouver, Vancouver is a major city in western Canada, located in the Lower Mainland region of British Columbia. .</p>
+      <div class="card-footer">
+      <a href="https://en.wikipedia.org/wiki/Vancouver" class="card-link">More about Vancouver</a>
+    </div>
+    </div>
+  </div>
+
+
+  <div class="card" style="width: 22rem;">
+    <img src="Austin.jpg" class="card-img-top" alt="Mysore">
+    <div class="card-body">
+      <p class="card-text">Austin, Austin is the capital city of the U.S. state of Texas, as well as the seat and most populous city of Travis County, with portions extending into Hays and Williamson counties. Incorporated on December 27, 1839,[7] it is the 10th-most populous city in the United States,[8] the fourth-most populous city in Texas, and the second-most populous state capital city.[9] It has been one of the fastest growing large cities in the United States since 2010.</p>
+      <div class="card-footer">
+      <a href="https://en.wikipedia.org/wiki/Austin,_Texas" class="card-link">More about Austin</a>
+    </div>
+    </div>
+  </div>
+
+
+  <div class="card" style="width: 22rem;">
+    <img src="San antonio.jpg" class="card-img-top" alt="Srinagar">
+    <div class="card-body">
+      <p class="card-text">San antonio, San Antonio (/ˌsæn ænˈtoʊnioʊ/ SAN an-TOH-nee-oh; Spanish for "Saint Anthony"), officially the City of San Antonio, is a city in and the county seat of Bexar County, Texas, United States. The city is the seventh-most populous in the United States, the second-largest in the Southern United States,[9] and the second-most populous in Texas after Houston. It is the 17th-most populous city in North America, with 1,434,625 residents as of 2020</p>
+      <div class="card-footer">
+      <a href="https://en.wikipedia.org/wiki/San_Antonio" class="card-link">More about San antonio</a>
+    </div>
+    </div>
+  </div>
+</div>
+</div>
+</br>
     
       </br>
       </br>
