--- a/cities.html
+++ b/cities.html
@@ -216,7 +216,7 @@
 <div class="container">
     <div class="row">
 <div class="card" style="width: 22rem;">
-    <img src="Vancouver.jpg" class="card-img-top" alt="Agra" height="245px">
+    <img src="Vancouver.jpg" class="card-img-top" alt="Vancouver" height="245px">
     <div class="card-body">
       <p class="card-text">Vancouver, Vancouver is a major city in western Canada, located in the Lower Mainland region of British Columbia. .</p>
       <div class="card-footer">
@@ -227,7 +227,7 @@
 
 
   <div class="card" style="width: 22rem;">
-    <img src="Austin.jpg" class="card-img-top" alt="Mysore">
+    <img src="Austin.jpg" class="card-img-top" alt="Austin">
     <div class="card-body">
       <p class="card-text">Austin, Austin is the capital city of the U.S. state of Texas, as well as the seat and most populous city of Travis County, with portions extending into Hays and Williamson counties. Incorporated on December 27, 1839,[7] it is the 10th-most populous city in the United States,[8] the fourth-most populous city in Texas, and the second-most populous state capital city.[9] It has been one of the fastest growing large cities in the United States since 2010.</p>
       <div class="card-footer">
@@ -238,7 +238,7 @@
 
 
   <div class="card" style="width: 22rem;">
-    <img src="San antonio.jpg" class="card-img-top" alt="Srinagar">
+    <img src="San antonio.jpg" class="card-img-top" alt="San antonio">
     <div class="card-body">
       <p class="card-text">San antonio, San Antonio (/ˌsæn ænˈtoʊnioʊ/ SAN an-TOH-nee-oh; Spanish for "Saint Anthony"), officially the City of San Antonio, is a city in and the county seat of Bexar County, Texas, United States. The city is the seventh-most populous in the United States, the second-largest in the Southern United States,[9] and the second-most populous in Texas after Houston. It is the 17th-most populous city in North America, with 1,434,625 residents as of 2020</p>
       <div class="card-footer">
